Basic question + answer components

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,5 +1,9 @@
 {
   "start-page": {
     "title": "¡Noche de Preguntas!"
+  },
+  "trivia": {
+    "question": "Pregunta",
+    "options": "Opciones"
   }
 }
