--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,5 +1,9 @@
 {
   "start-page": {
     "title": "Trivia Night!"
+  },
+  "trivia": {
+    "question": "Question",
+    "options": "Options"
   }
 }
