Router and temp routes

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -2,6 +2,11 @@
   "header": {
     "title": "Trivia Night!"
   },
+  "start-screen": {
+    "create": "Create game",
+    "or": "or",
+    "join": "Join game"
+  },
   "trivia": {
     "question": "Question",
     "options": "Options"
