Added firebase auth and log in/out

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,4 +1,8 @@
 {
+  "login": {
+    "google": "Login with Google",
+    "logout": "Log Out"
+  },
   "header": {
     "title": "Trivia Night!"
   },
