--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,4 +1,8 @@
 {
+  "login": {
+    "google": "Entrar con Google",
+    "logout": "Salir"
+  },
   "header": {
     "title": "¡Noche de Preguntas!"
   },
