Configured firebase storage and initial write of new game

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -11,6 +11,9 @@
     "or": "or",
     "join": "Join game"
   },
+  "create-screen": {
+    "create": "Start new game"
+  },
   "trivia": {
     "question": "Question",
     "options": "Options"
