explicitely press a buton to start game

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -10,7 +10,7 @@
     "create": "Create game",
     "or": "or",
     "join": "Join game",
-    "start": "Start new game"
+    "start": "Start!"
   },
   "trivia": {
     "question": "Question",
