--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -10,7 +10,7 @@
     "create": "Crear juego",
     "or": "o",
     "join": "Unirse a un juego",
-    "start": "Comenzar nuevo juego"
+    "start": "Comenzar!"
   },
   "trivia": {
     "question": "Pregunta",
